[gd_scene load_steps=85 format=3 uid="uid://cwhqdw3ex4dso"]

[ext_resource type="PackedScene" uid="uid://c12wli2xky3ja" path="res://Vehicle/RX450h/RX450h.tscn" id="1"]
[ext_resource type="Script" path="res://EgoVehicle.gd" id="2"]
[ext_resource type="Script" path="res://Sun.gd" id="2_6kmdb"]
[ext_resource type="Script" path="res://BackGround.gd" id="2_mywyw"]
[ext_resource type="Script" path="res://Main.gd" id="3"]
[ext_resource type="Script" path="res://RoadSurfaceMesh.gd" id="4"]
[ext_resource type="Script" path="res://Vehicle/robobus/NewVehicle.gd" id="4_pullt"]
[ext_resource type="Script" path="res://RoadMarkerMesh.gd" id="5"]
[ext_resource type="Script" path="res://PointCloudMapMesh.gd" id="6"]
[ext_resource type="Script" path="res://ObstacleSegmentationMesh.gd" id="7"]
[ext_resource type="PackedScene" uid="uid://mcte0q8vfi06" path="res://Vehicle/robobus/robobus.tscn" id="7_mx7j5"]
[ext_resource type="Script" path="res://TrajectoryMesh.gd" id="8"]
[ext_resource type="Script" path="res://Camera.gd" id="9"]
[ext_resource type="Script" path="res://DynamicObjectMesh.gd" id="10"]
[ext_resource type="Script" path="res://TrafficLightMesh.gd" id="13"]
[ext_resource type="Script" path="res://Vehicle/HeadBeamLight.gd" id="14"]
[ext_resource type="Script" path="res://Menu.gd" id="17"]
[ext_resource type="Script" path="res://TrafficLightRecognitionMesh.gd" id="18"]
[ext_resource type="Script" path="res://Steering.gd" id="19"]
[ext_resource type="Texture2D" uid="uid://dheocmceyan8" path="res://steering.png" id="20"]
[ext_resource type="Texture2D" uid="uid://8nsarni0u0kg" path="res://console_meter.png" id="21"]
[ext_resource type="Texture2D" uid="uid://dxngfcjijk4iq" path="res://console_meter_hand.png" id="23"]
[ext_resource type="Script" path="res://ConsoleMeter.gd" id="24"]
[ext_resource type="Script" path="res://GdScript/RED.gd" id="24_gfjs0"]
[ext_resource type="Script" path="res://VectorMap.gd" id="25"]
[ext_resource type="Texture2D" uid="uid://cogamtr47shng" path="res://icon/traffic_light.png" id="25_80sk0"]
[ext_resource type="Script" path="res://PathMesh.gd" id="26"]
[ext_resource type="Texture2D" uid="uid://cwbya3b3gcnn7" path="res://icon/left64.png" id="26_ergop"]
[ext_resource type="Script" path="res://GdScript/GREEN.gd" id="26_gcr4t"]
[ext_resource type="Script" path="res://GdScript/LeftTurnLight_report.gd" id="26_o3a2b"]
[ext_resource type="Script" path="res://GdScript/RightTurnLight_report.gd" id="27_541fo"]
[ext_resource type="Texture2D" uid="uid://dhx1k1tm67nxd" path="res://icon/right64.png" id="27_uacwn"]
[ext_resource type="Script" path="res://GdScript/YELLOW.gd" id="28_5fqwv"]
[ext_resource type="Script" path="res://GdScript/system_time_report.gd" id="28_7oowd"]
[ext_resource type="Texture2D" uid="uid://dcyw5nisuhjh" path="res://icon/Red.png" id="28_wm653"]
[ext_resource type="Texture2D" uid="uid://cy5u4bbawd1mn" path="res://icon/green.png" id="29_u8smk"]
[ext_resource type="Texture2D" uid="uid://cwh51cag00thd" path="res://icon/yellow.png" id="30_njrtp"]
[ext_resource type="Script" path="res://GdScript/Station_info_report.gd" id="30_odghu"]
[ext_resource type="Texture2D" uid="uid://dur4qwmppu0u2" path="res://icon/clock.png" id="31_ijy6o"]
[ext_resource type="Script" path="res://GdScript/Mode_report.gd" id="31_mb6uj"]
[ext_resource type="Texture2D" uid="uid://dtt2dsle0fs07" path="res://icon/am.png" id="32_bc0wk"]
[ext_resource type="Texture2D" uid="uid://do8asx706sfjx" path="res://icon/rectangle-horizontal.png" id="33_oa0v5"]
[ext_resource type="Script" path="res://GdScript/Brake_report.gd" id="34_ambtv"]
[ext_resource type="Texture2D" uid="uid://dxrikk327q8oi" path="res://icon/north.png" id="34_ats8c"]
[ext_resource type="Script" path="res://GdScript/Gear_report.gd" id="34_pfell"]
[ext_resource type="Script" path="res://GdScript/SystemTimeReport.gd" id="34_rw2hk"]
[ext_resource type="Texture2D" uid="uid://dds4cf4heae70" path="res://icon/battery.png" id="35_afnte"]
[ext_resource type="Script" path="res://GdScript/Throttle_report.gd" id="35_mxg3c"]
[ext_resource type="Script" path="res://GdScript/Battery_report.gd" id="36_cavtf"]
[ext_resource type="Texture2D" uid="uid://b8tkqktuu1k5m" path="res://icon/speedometer.png" id="36_p2y6d"]
[ext_resource type="Texture2D" uid="uid://bp8s7g6bk0swe" path="res://icon/robobus-39.png" id="37_b3f5g"]
[ext_resource type="Texture2D" uid="uid://b3c7rm7ld87o2" path="res://icon/gear.png" id="38_ccgsq"]
[ext_resource type="Texture2D" uid="uid://b7hqstx860bw7" path="res://icon/brake.png" id="39_nr3d7"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_m8ng5"]
sky_top_color = Color(0, 0, 0, 1)
sky_horizon_color = Color(0.119363, 0.466633, 0.961925, 1)
sky_curve = 0.00437356
ground_bottom_color = Color(0.207843, 0.223529, 0.294118, 1)
ground_horizon_color = Color(0.119363, 0.466633, 0.961925, 1)
ground_curve = 0.00233258

[sub_resource type="Sky" id="Sky_fb0c3"]
sky_material = SubResource("ProceduralSkyMaterial_m8ng5")
process_mode = 3

[sub_resource type="Environment" id="Environment_hn68x"]
resource_name = "environment"
background_mode = 2
background_color = Color(1, 1, 1, 1)
sky = SubResource("Sky_fb0c3")
ambient_light_source = 3

[sub_resource type="BoxShape3D" id="BoxShape3D_4i4pm"]
size = Vector3(4, 3, 3)

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(4.8091, 1.60975, 2.14476)

[sub_resource type="StandardMaterial3D" id="12"]
render_priority = -2
blend_mode = 1
cull_mode = 2
albedo_color = Color(0.329412, 0.254902, 0.596078, 1)
clearcoat = 0.0
clearcoat_roughness = 0.33
ao_light_affect = 0.64
grow_amount = -11.812
use_point_size = true
distance_fade_mode = 1
distance_fade_max_distance = 200.0

[sub_resource type="ArrayMesh" id="4"]
resource_name = "mesh"

[sub_resource type="StandardMaterial3D" id="13"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.0823529, 0.352941, 0.654902, 0.847059)
use_point_size = true
point_size = 2.0
distance_fade_mode = 1
distance_fade_max_distance = 25.0

[sub_resource type="ArrayMesh" id="10"]
resource_name = "mesh"

[sub_resource type="StandardMaterial3D" id="17"]
render_priority = -3
transparency = 1
shading_mode = 0
albedo_color = Color(0, 0.0745098, 0.137255, 1)

[sub_resource type="ArrayMesh" id="16"]
resource_name = "mesh"

[sub_resource type="StandardMaterial3D" id="19"]
render_priority = -2
transparency = 1
shading_mode = 0
albedo_color = Color(0.529412, 0.529412, 0.529412, 1)
proximity_fade_distance = 1000.0
distance_fade_max_distance = 200.0

[sub_resource type="ArrayMesh" id="18"]
resource_name = "mesh"

[sub_resource type="StandardMaterial3D" id="30"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.329412, 0.717647, 1, 1)
heightmap_scale = 1.777
refraction_scale = 0.24
distance_fade_max_distance = 0.0

[sub_resource type="ArrayMesh" id="29"]
resource_name = "mesh"

[sub_resource type="StandardMaterial3D" id="34"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.0862745, 0.313726, 0.494118, 0.964706)

[sub_resource type="ArrayMesh" id="35"]
resource_name = "mesh"

[sub_resource type="StandardMaterial3D" id="24"]
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 1, 1, 0.823529)
distance_fade_mode = 1
distance_fade_max_distance = 60.0

[sub_resource type="ArrayMesh" id="23"]
resource_name = "mesh"

[sub_resource type="StandardMaterial3D" id="26"]
render_priority = 1
transparency = 1
depth_draw_mode = 1
albedo_color = Color(0.317647, 0.670588, 0.878431, 0.847059)
emission_enabled = true
emission = Color(0, 0.0588235, 0.0745098, 1)
emission_energy_multiplier = 8.0
normal_scale = -2.69
distance_fade_mode = 1
distance_fade_max_distance = 25.0

[sub_resource type="ArrayMesh" id="27"]
resource_name = "mesh"

[sub_resource type="StandardMaterial3D" id="32"]
render_priority = 1
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true

[sub_resource type="ArrayMesh" id="31"]
resource_name = "mesh"

[sub_resource type="FontVariation" id="FontVariation_xpshq"]

[sub_resource type="FontVariation" id="FontVariation_oja1b"]

[sub_resource type="FontVariation" id="FontVariation_hqled"]

[sub_resource type="FontVariation" id="FontVariation_gk3v0"]

[sub_resource type="FontVariation" id="FontVariation_g1if4"]
variation_face_index = 3

[sub_resource type="FontVariation" id="FontVariation_fthe5"]

[sub_resource type="FontVariation" id="FontVariation_g1468"]

[sub_resource type="FontVariation" id="FontVariation_s38jp"]

[node name="Main" type="Node3D"]
script = ExtResource("3")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, 0, 3, 0)
directional_shadow_mode = 0
sky_mode = 1
script = ExtResource("2_6kmdb")

[node name="BackGround" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_hn68x")
script = ExtResource("2_mywyw")

[node name="NewVehicle" type="Node3D" parent="."]
script = ExtResource("4_pullt")
tire_radius = null

[node name="NewVehicleKinematicBody" type="CharacterBody3D" parent="NewVehicle"]

[node name="HeadBeamLight" type="SpotLight3D" parent="NewVehicle/NewVehicleKinematicBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.57211, 0)
script = ExtResource("14")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NewVehicle/NewVehicleKinematicBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.123535, 1, 0)
shape = SubResource("BoxShape3D_4i4pm")

[node name="Robobus3D" parent="NewVehicle/NewVehicleKinematicBody" instance=ExtResource("7_mx7j5")]

[node name="Camera3D" type="Node3D" parent="NewVehicle"]
script = ExtResource("9")

[node name="Horizon" type="Node3D" parent="NewVehicle/Camera3D"]

[node name="Vertical" type="Node3D" parent="NewVehicle/Camera3D/Horizon"]

[node name="ViewCamera" type="Camera3D" parent="NewVehicle/Camera3D/Horizon/Vertical"]
transform = Transform3D(-4.37114e-08, 0.34202, -0.939693, 0, 0.939693, 0.34202, 1, 1.49502e-08, -4.10753e-08, -8, 4, 0)
size = 90.53
far = 500.0

[node name="EgoVehicle" type="Node3D" parent="."]
visible = false
script = ExtResource("2")

[node name="EgoVehicleKinematicBody" type="CharacterBody3D" parent="EgoVehicle"]

[node name="HeadBeamLight" type="SpotLight3D" parent="EgoVehicle/EgoVehicleKinematicBody"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3.84072, 1.10939, 0)
light_energy = 10.0
light_specular = 3.0
spot_range = 200.0
spot_angle = 54.1078
script = ExtResource("14")

[node name="CollisionShape3D" type="CollisionShape3D" parent="EgoVehicle/EgoVehicleKinematicBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.44026, 0.82268, 0)
shape = SubResource("1")

[node name="VehicleBody3D" parent="EgoVehicle/EgoVehicleKinematicBody" instance=ExtResource("1")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.4204, 0, 0)

[node name="Camera3D" type="Node3D" parent="EgoVehicle"]
script = ExtResource("9")

[node name="Horizon" type="Node3D" parent="EgoVehicle/Camera3D"]

[node name="Vertical" type="Node3D" parent="EgoVehicle/Camera3D/Horizon"]

[node name="ViewCamera" type="Camera3D" parent="EgoVehicle/Camera3D/Horizon/Vertical"]
transform = Transform3D(-4.37114e-08, 0.34202, -0.939693, 0, 0.939693, 0.34202, 1, 1.49502e-08, -4.10753e-08, -8, 4, 0)
size = 90.53
far = 500.0

[node name="PointCloudMapMesh" type="MeshInstance3D" parent="."]
material_override = SubResource("12")
mesh = SubResource("4")
script = ExtResource("6")

[node name="ObstacleSegmentationMesh" type="MeshInstance3D" parent="."]
material_override = SubResource("13")
mesh = SubResource("10")
skeleton = NodePath("../EgoVehicle")
script = ExtResource("7")

[node name="VectorMap" type="Node3D" parent="."]
script = ExtResource("25")

[node name="RoadSurfaceMesh" type="MeshInstance3D" parent="VectorMap"]
material_override = SubResource("17")
mesh = SubResource("16")
skeleton = NodePath("../..")
script = ExtResource("4")

[node name="RoadMarkerMesh" type="MeshInstance3D" parent="VectorMap"]
material_override = SubResource("19")
mesh = SubResource("18")
skeleton = NodePath("../RoadSurfaceMesh")
script = ExtResource("5")

[node name="TrafficLightMesh" type="MeshInstance3D" parent="VectorMap"]
material_override = SubResource("30")
mesh = SubResource("29")
script = ExtResource("13")

[node name="PathDrivableAreaMesh" type="MeshInstance3D" parent="."]
material_override = SubResource("34")
mesh = SubResource("35")
script = ExtResource("26")

[node name="TrajectoryMesh" type="MeshInstance3D" parent="."]
material_override = SubResource("24")
mesh = SubResource("23")
script = ExtResource("8")

[node name="DynamicObjectMesh" type="MeshInstance3D" parent="."]
material_override = SubResource("26")
mesh = SubResource("27")
script = ExtResource("10")

[node name="TrafficLightRecognitionMesh" type="MeshInstance3D" parent="."]
material_override = SubResource("32")
mesh = SubResource("31")
skeleton = NodePath("../VectorMap")
script = ExtResource("18")

[node name="Mask" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Rectangle-horizontal" type="Sprite2D" parent="Mask"]
modulate = Color(0.564706, 0.564706, 0.564706, 1)
position = Vector2(0, -80)
scale = Vector2(9.32898, 0.486328)
texture = ExtResource("33_oa0v5")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("17")

[node name="PointCloudMapMeshCheckButton" type="CheckButton" parent="Menu"]
layout_mode = 0
offset_right = 76.0
offset_bottom = 40.0
focus_mode = 0
button_pressed = true
text = "PointCloud Map"

[node name="NightModeCheckButton" type="CheckButton" parent="Menu"]
layout_mode = 0
offset_top = 40.0
focus_mode = 0
text = "Night Mode"

[node name="OnlyKnownObjectCheckButton" type="CheckButton" parent="Menu"]
layout_mode = 0
offset_top = 80.0
focus_mode = 0
button_pressed = true
text = "Only Known Objects"

[node name="Object3DModelButton" type="CheckButton" parent="Menu"]
layout_mode = 0
offset_top = 121.0
offset_right = 224.0
offset_bottom = 152.0
focus_mode = 0
text = "3D Model Mode"

[node name="EnableObstacleSegmentationButton" type="CheckButton" parent="Menu"]
layout_mode = 0
offset_top = 159.0
offset_right = 224.0
offset_bottom = 190.0
focus_mode = 0
button_pressed = true
text = "ObstacleSegmentation"

[node name="RenderingQuality" type="HBoxContainer" parent="Menu"]
layout_mode = 0
offset_left = 6.0
offset_top = 202.0
offset_right = 356.0
offset_bottom = 225.0

[node name="Label" type="Label" parent="Menu/RenderingQuality"]
layout_mode = 2
text = "Rendering Quality (Low-High)"

[node name="MSAASlider" type="HSlider" parent="Menu/RenderingQuality"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="VehicleStatus" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Steering" type="Sprite2D" parent="VehicleStatus"]
position = Vector2(0, -80)
scale = Vector2(0.5, 0.5)
texture = ExtResource("20")
script = ExtResource("19")

[node name="TrafficSignal" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="TrafficLight" type="Sprite2D" parent="TrafficSignal"]
position = Vector2(-96, 72)
scale = Vector2(0.72, 0.72)
texture = ExtResource("25_80sk0")

[node name="RED" type="TextureRect" parent="TrafficSignal"]
layout_mode = 0
offset_left = -152.0
offset_top = 56.0
offset_right = -120.0
offset_bottom = 88.0
texture = ExtResource("28_wm653")
expand_mode = 1
script = ExtResource("24_gfjs0")

[node name="GREEN" type="TextureRect" parent="TrafficSignal"]
layout_mode = 0
offset_left = -112.0
offset_top = 56.0
offset_right = -80.0
offset_bottom = 88.0
texture = ExtResource("30_njrtp")
expand_mode = 1
script = ExtResource("26_gcr4t")

[node name="YELLOW" type="TextureRect" parent="TrafficSignal"]
layout_mode = 0
offset_left = -72.0
offset_top = 56.0
offset_right = -40.0
offset_bottom = 88.0
texture = ExtResource("29_u8smk")
expand_mode = 1
script = ExtResource("28_5fqwv")

[node name="TurnSignal" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="LeftTurnLight" type="TextureRect" parent="TurnSignal"]
layout_mode = 0
offset_left = -168.0
offset_top = 128.0
offset_right = -128.0
offset_bottom = 168.0
texture = ExtResource("26_ergop")
expand_mode = 1
script = ExtResource("26_o3a2b")

[node name="RightTurnLight" type="TextureRect" parent="TurnSignal"]
layout_mode = 0
offset_left = -64.0
offset_top = 128.0
offset_right = -24.0
offset_bottom = 168.0
texture = ExtResource("27_uacwn")
expand_mode = 1
script = ExtResource("27_541fo")

[node name="Dates" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -175.0
offset_top = 192.0
offset_right = 17.0
offset_bottom = 384.0
grow_horizontal = 0
script = ExtResource("28_7oowd")

[node name="Label" type="Label" parent="Dates"]
layout_mode = 0
offset_left = -657.0
offset_top = -173.0
offset_right = -401.0
offset_bottom = -125.0
script = ExtResource("34_rw2hk")

[node name="Am" type="Sprite2D" parent="Dates/Label"]
position = Vector2(-21, 12)
scale = Vector2(0.25, 0.25)
texture = ExtResource("32_bc0wk")

[node name="Clock" type="Sprite2D" parent="Dates/Label"]
position = Vector2(188, 12)
scale = Vector2(0.25, 0.25)
texture = ExtResource("31_ijy6o")

[node name="Station" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = -9.0
offset_right = 48.0
offset_bottom = -9.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("30_odghu")

[node name="EstimateTimeSlider" type="HSlider" parent="Station"]
layout_mode = 0
offset_left = -448.0
offset_top = -20.0
offset_right = -64.0
offset_bottom = -4.0

[node name="TextureProgressBar" type="TextureProgressBar" parent="Station"]
layout_mode = 1
anchors_preset = -1
anchor_left = 28.825
anchor_top = 16.225
anchor_right = 28.825
anchor_bottom = 16.225
offset_left = -448.0
offset_top = -32.0
offset_right = -65.0
offset_bottom = -16.0

[node name="CurrentStationLabel" type="Label" parent="Station"]
layout_mode = 0
offset_left = -448.0
offset_top = -96.0
offset_right = -328.0
offset_bottom = -72.0
theme_override_fonts/font = SubResource("FontVariation_xpshq")
text = "Current Station"
vertical_alignment = 1

[node name="NextStationLabel" type="Label" parent="Station"]
layout_mode = 0
offset_left = -161.0
offset_top = -96.0
offset_right = -64.0
offset_bottom = -72.0
text = "Next Station"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CurrentStation" type="Label" parent="Station"]
layout_mode = 0
offset_left = -448.0
offset_top = -72.0
offset_right = -328.0
offset_bottom = -48.0
text = "未知站点"
vertical_alignment = 1

[node name="TargetStation" type="Label" parent="Station"]
layout_mode = 0
offset_left = -160.0
offset_top = -72.0
offset_right = -64.0
offset_bottom = -48.0
text = "未知站点"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VehicleRepot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -7.0
offset_bottom = -7.0
grow_vertical = 0

[node name="Robobus-39" type="Sprite2D" parent="VehicleRepot"]
position = Vector2(357, -31)
scale = Vector2(0.161392, 0.161392)
texture = ExtResource("37_b3f5g")
script = ExtResource("31_mb6uj")

[node name="ModeLabel" type="Label" parent="VehicleRepot/Robobus-39"]
anchors_preset = -1
anchor_left = -0.0574074
anchor_right = 0.0351852
offset_left = -136.608
offset_top = -117.588
offset_right = 160.392
offset_bottom = 31.4116
theme_override_fonts/font = SubResource("FontVariation_oja1b")
theme_override_font_sizes/font_size = 80
text = "MODE"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Gear" type="Sprite2D" parent="VehicleRepot"]
show_behind_parent = true
position = Vector2(32, -129)
scale = Vector2(0.0624999, 0.0624999)
texture = ExtResource("38_ccgsq")
script = ExtResource("34_pfell")

[node name="GearLabel" type="Label" parent="VehicleRepot/Gear"]
offset_left = 384.0
offset_top = -272.0
offset_right = 2560.0
offset_bottom = 274.0
theme_override_fonts/font = SubResource("FontVariation_hqled")
theme_override_font_sizes/font_size = 400
text = "GEAR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Brake" type="Sprite2D" parent="VehicleRepot"]
position = Vector2(32, -87)
scale = Vector2(0.166231, 0.166231)
texture = ExtResource("39_nr3d7")
script = ExtResource("34_ambtv")

[node name="ProgressBar" type="ProgressBar" parent="VehicleRepot/Brake"]
offset_left = 144.0
offset_top = -60.0
offset_right = 963.0
offset_bottom = 84.0
theme_override_constants/outline_size = 1
theme_override_fonts/font = SubResource("FontVariation_gk3v0")
theme_override_font_sizes/font_size = 100

[node name="Throttle" type="Sprite2D" parent="VehicleRepot"]
position = Vector2(32, -56)
scale = Vector2(0.0625, 0.0625)
texture = ExtResource("36_p2y6d")
script = ExtResource("35_mxg3c")

[node name="ProgressBar" type="ProgressBar" parent="VehicleRepot/Throttle"]
offset_left = 384.0
offset_top = -144.0
offset_right = 2560.0
offset_bottom = 240.0
theme_override_constants/outline_size = 1
theme_override_fonts/font = SubResource("FontVariation_g1if4")
theme_override_font_sizes/font_size = 260

[node name="Battery" type="Sprite2D" parent="VehicleRepot"]
position = Vector2(32, -18)
scale = Vector2(0.0625, 0.0625)
texture = ExtResource("35_afnte")
script = ExtResource("36_cavtf")

[node name="ProgressBar" type="ProgressBar" parent="VehicleRepot/Battery"]
offset_left = 384.0
offset_top = -240.0
offset_right = 2560.0
offset_bottom = 144.0
theme_override_constants/outline_size = 1
theme_override_fonts/font = SubResource("FontVariation_fthe5")
theme_override_font_sizes/font_size = 260

[node name="ConsoleMeter" type="Sprite2D" parent="VehicleRepot"]
position = Vector2(16, 79)
scale = Vector2(0.125, 0.125)
texture = ExtResource("21")
script = ExtResource("24")

[node name="Hand" type="Sprite2D" parent="VehicleRepot/ConsoleMeter"]
visible = false
position = Vector2(0, -14)
texture = ExtResource("23")

[node name="VelocityLabel" type="Label" parent="VehicleRepot/ConsoleMeter"]
offset_left = 1408.0
offset_top = -1728.0
offset_right = 2432.0
offset_bottom = -637.0
theme_override_fonts/font = SubResource("FontVariation_g1468")
theme_override_font_sizes/font_size = 800
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KMHLabel" type="Label" parent="VehicleRepot/ConsoleMeter"]
offset_left = 1728.0
offset_top = -864.0
offset_right = 2112.0
offset_bottom = -659.0
theme_override_fonts/font = SubResource("FontVariation_s38jp")
theme_override_font_sizes/font_size = 150
text = "km/h"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Compass" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = -9.0
offset_right = 48.0
offset_bottom = -9.0
grow_horizontal = 0
grow_vertical = 0

[node name="North" type="Sprite2D" parent="Compass"]
position = Vector2(-96, -191)
scale = Vector2(0.5, 0.5)
texture = ExtResource("34_ats8c")

[connection signal="toggled" from="Menu/PointCloudMapMeshCheckButton" to="PointCloudMapMesh" method="_on_CheckButton_toggled"]
[connection signal="toggled" from="Menu/NightModeCheckButton" to="Sun" method="_on_night_mode_check_button_toggled"]
[connection signal="toggled" from="Menu/NightModeCheckButton" to="BackGround" method="_on_night_mode_check_button_toggled"]
[connection signal="toggled" from="Menu/NightModeCheckButton" to="EgoVehicle" method="_on_night_mode_check_button_toggled"]
[connection signal="toggled" from="Menu/OnlyKnownObjectCheckButton" to="DynamicObjectMesh" method="_on_OnlyKnownObjectCheckButton_toggled"]
[connection signal="toggled" from="Menu/Object3DModelButton" to="DynamicObjectMesh" method="_on_d_model_object_toggled"]
[connection signal="toggled" from="Menu/EnableObstacleSegmentationButton" to="ObstacleSegmentationMesh" method="_on_enable_obstacle_segmentation_button_toggled"]
[connection signal="value_changed" from="Menu/RenderingQuality/MSAASlider" to="." method="_on_MSAASlider_value_changed"]
